versão 2 - mudei cor de fundo

--- a/sinuca.html
+++ b/sinuca.html
@@ -87,7 +87,7 @@
         }
         
         #bola4{
-            background-color:orange;
+            background-color: pink;
             margin-left:5%;
             display:inline-block;
         }
